--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "ky": "^0.31.3",
+    "ky-universal": "^0.11.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
