--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
     "ky-universal": "^0.11.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "slugify": "^1.6.5",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.7.20",
     "@types/react": "18.0.21",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "tailwindcss": "^3.2.1"
   }
 }
