--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ky-universal": "^0.11.0",
     "next": "12.3.1",
+    "pokemon-tcg-sdk-typescript": "^1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "slugify": "^1.6.5",
